--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.guilhermearpassos.demoplugin
-pluginName = demoPlugin
-pluginRepositoryUrl = https://github.com/guilhermearpassos/demoPlugin
+pluginGroup = com.github.guilhermearpassos.golang
+pluginName = extractStructFromParams
+pluginRepositoryUrl = https://github.com/guilhermearpassos/Goland-ExtractStructFromParamsPlugin
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
 
@@ -11,12 +11,12 @@ pluginSinceBuild = 232
 pluginUntilBuild = 242.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
-platformType = IC
+platformType = GO
 platformVersion = 2023.2.6
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins =
+platformPlugins =org.jetbrains.plugins.go
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 8.7
